--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@
 		<meta name="twitter:title" content="{{ page.title | default: site.title }}">
 		<meta name="twitter:description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 }}">
 		<meta name="twitter:image" content="{{ page.image | default: site.image | absolute_url }}">
-
+		<link rel="canonical" href="{{page.url | absolute_url}}"
 	</head>
 	
 	<body>
@@ -39,7 +39,7 @@
 					<a href="{{ '/' | relative_url}}" class="tab">Home</a>
 					<a href="{{ '/portfolio' | relative_url}}" class="tab">Projects</a>
 
-					<a href="{{ '/blog' | relative_url}}" class="tab active">Writing</a>
+					<a href="{{ '/blog' | relative_url}}" class="tab active">Blog</a>
 					<span onclick="toggle()" class="tab tab-svg">
 						<svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path id='toggle-button' d="M12 2A9.91 9.91 0 0 0 9 2.46A10 10 0 0 1 9 21.54A10 10 0 1 0 12 2Z" /></svg>
 					</span>
